Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p> <b>
+        Nombre:Diego Sosa <br>
+        CI:30887624
+    </b></p>
+    <p></p>
     <div class="container">
         <header>
+            <h1>Materia:Teleprocesos</h1>
             <h1>Integración de APIs de IA con n8n</h1>
         </header>
         
@@ -698,4 +704,5 @@
         });
     </script>
 </body>
+
 </html>
